--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ad Exchange Group",
   "repository": {
     "type": "git",
-    "url": "git://git@bitbucket.org:AdExchangeGrp/aeg-xray.git"
+    "url": "https://github.com/AdExchangeGrp/aeg-xray.git"
   },
   "license": "UNLICENSED",
   "scripts": {
