--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@adexchange/aeg-xray",
+  "name": "@push_innovation/aeg-xray",
   "version": "0.0.1",
   "description": "AWS xray sdk",
   "main": "./lib/index.js",
@@ -7,7 +7,7 @@
   "author": "Ad Exchange Group",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AdExchangeGrp/aeg-xray.git"
+    "url": "https://github.com/pushinnovation/aeg-xray.git"
   },
   "license": "UNLICENSED",
   "scripts": {
@@ -64,7 +64,7 @@
     "typescript": "^2.4.1"
   },
   "dependencies": {
-    "@adexchange/aeg-logger": "0.0.145",
+    "@push_innovation/aeg-logger": "0.0.6",
     "@types/express": "^4.0.36",
     "@types/lodash": "^4.14.70",
     "@types/request": "^2.0.1",
